--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ colorama==0.4.6
 confection==0.1.5
 cryptography==45.0.4
 cymem==2.0.11
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+import spacy
+spacy.cli.download("en_core_web_sm")
+nlp = spacy.load("en_core_web_sm")
 Flask==3.1.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
@@ -57,3 +59,4 @@ wasabi==1.1.3
 weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.2
+gunicorn==21.2.0
