--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ colorama==0.4.6
 confection==0.1.5
 cryptography==45.0.4
 cymem==2.0.11
-spacy.cli.download("en_core_web_sm")
-nlp = spacy.load("en_core_web_sm")
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 Flask==3.1.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -58,4 +58,3 @@ wasabi==1.1.3
 weasel==0.4.1
 Werkzeug==3.1.3
 wrapt==1.17.2
-gunicorn==21.2.0
