--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ murmurhash==1.0.13
 mysql==0.0.3
 mysql-connector-python==9.3.0
 mysqlclient==2.2.7
-numpy==1.26.4
+numpy>=1.19.0,<3.0.0
 packaging==25.0
 preshed==3.0.10
 pycparser==2.22
